Updated backend configuration

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://pavansaid3:pavansai0522@cluster0.mongodb.net/inventory?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://<pavansaid3>:<pavansai0522>@cluster0.mongodb.net/<inventory-system>?retryWrites=true&w=majority
